--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-MONGO_URI=mongodb://localhost:27017/taskmanager
+MONGO_URI=mongodb+srv://charlie29:leca-429@cluster0.hhdhxse.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=clave_super_secreta
